# Yandex_music_og_songs

./: .gitignore  README.md  config.example.yaml  pyproject.toml  setup.sh
src/yandex_music_og_songs/: __main__.py  artist_cache.py  artist_check.py  artist_resolver.py  catalog.py  choices_io.py  cli.py  client.py  config.py  detector.py  models.py  network.py  normalizer.py  parallel.py  playlist.py  replace_io.py  report.py  review_io.py  scan_cache.py  verifier.py  ytmusic.py
tests/: test_artist_cache.py  test_artist_resolver.py  test_choices_skip.py  test_detector.py  test_network.py  test_normalizer.py  test_playlist_scan.py  test_review_io.py  test_scan_merge.py  test_verifier.py  test_version_choose.py
