[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-music-og-songs"
version = "0.1.0"
description = "Auto replace fake Yandex Music tracks with originals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yandex-music>=2.2.0",
    "pydantic>=2.0",
    "ytmusicapi>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
yandex-og-songs = "yandex_music_og_songs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
